<resources>
    <string name="app_name">Labo03 Constraint Layouts</string>
    <string name="mainTitle">Cantidad de dinero</string>
    <string name="cantidad">0</string>
    <string name="fiveCents">$0.05</string>
    <string name="tenCents">$0.10</string>
    <string name="quarter">$0.25</string>
    <string name="oneDollar">$1.00</string>
    <string name="imgDescription">Moneda</string>
</resources>