<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/maintitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/txtviewmargintoptitle"
        android:text="@string/mainTitle"
        android:textColor="@color/black"
        android:textSize="@dimen/textsizetitle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantidad"
        android:textSize="@dimen/textsizeCantidad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maintitle"
        app:layout_constraintVertical_bias="0.096" />

    <ImageView
        android:id="@+id/imgFiveCents"
        android:layout_width="@dimen/imagedimen"
        android:layout_height="@dimen/imagedimen"
        android:layout_marginStart="@dimen/marginstart"
        android:contentDescription="@string/imgDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgTenCents"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547"
        app:srcCompat="@drawable/five_cents" />

    <ImageView
        android:id="@+id/imgTenCents"
        android:layout_width="@dimen/imagedimen"
        android:layout_height="@dimen/imagedimen"
        android:layout_marginEnd="@dimen/marginend"
        android:contentDescription="@string/imgDescription"
        app:layout_constraintBottom_toBottomOf="@+id/imgFiveCents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgFiveCents"
        app:layout_constraintTop_toTopOf="@+id/imgFiveCents"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ten_cents" />

    <ImageView
        android:id="@+id/imgQuarter"
        android:layout_width="@dimen/imagedimen"
        android:layout_height="@dimen/imagedimen"
        android:layout_marginStart="@dimen/imgmarginstart"
        android:contentDescription="@string/imgDescription"
        app:layout_constraintBottom_toBottomOf="@+id/imgOneDollar"
        app:layout_constraintEnd_toStartOf="@+id/imgOneDollar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgOneDollar"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/quarter" />

    <ImageView
        android:id="@+id/imgOneDollar"
        android:layout_width="@dimen/imagedimen"
        android:layout_height="@dimen/imagedimen"
        android:layout_marginEnd="@dimen/imgmarginend"
        android:contentDescription="@string/imgDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgQuarter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.827"
        app:srcCompat="@drawable/one_dollar" />

    <TextView
        android:id="@+id/txtviewfivecents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txtviewmarginstart"
        android:text="@string/fiveCents"
        app:layout_constraintBottom_toBottomOf="@+id/txtviewtencents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtviewtencents"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtviewtencents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/txtviewmarginendtencents"
        android:text="@string/tenCents"
        app:layout_constraintBottom_toTopOf="@+id/imgOneDollar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgTenCents" />

    <TextView
        android:id="@+id/txtviewquarter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txtviewmarginstart"
        android:text="@string/quarter"
        app:layout_constraintBottom_toBottomOf="@+id/txtVWOndedollar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtVWOndedollar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtVWOndedollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/txtviewmargintopOnedollar"
        android:layout_marginEnd="@dimen/txtviewmarginendOnedollar"
        android:text="@string/oneDollar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toEndOf="@+id/txtviewquarter"
        app:layout_constraintTop_toBottomOf="@+id/imgOneDollar"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>